# auto_builder

./: Cargo.toml  README.md
.github/workflows/: ci.yml
auto_builder/: Cargo.toml
auto_builder/src/: lib.rs
auto_builder_derive/: Cargo.toml
auto_builder_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: builder_tests.rs
test_suite/tests/compile-fail/: build_without_required.rs  build_without_required.stderr
